# clab-connector

./: .gitignore  Makefile  README.md  eda_containerlab_connector.py  install.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ruff.yml
assets/: srlinux.bin.md5
assets/openapi/: README.md
assets/openapi/v24.12.1/: interfaces.json
clab_connector/: __init__.py
clab_connector/cli/: __init__.py  common.py  integrate.py  main.py  remove.py  versioning.py
clab_connector/clients/eda/: __init__.py  client.py  http_client.py
clab_connector/clients/kubernetes/: __init__.py  client.py
clab_connector/core/: eda.py  helpers.py  integrate.py  k8s_utils.py  link.py  node.py  node_srl.py  remove.py  subcommand.py  topology.py
clab_connector/models/: link.py  topology.py
clab_connector/models/node/: __init__.py  arista_ceos.py  base.py  factory.py  nokia_srl.py  nokia_sros.py
clab_connector/services/export/: topology_exporter.py
clab_connector/services/health/: health_checker.py
clab_connector/services/integration/: __init__.py  ceos_post_integration.py  sros_post_integration.py  topology_integrator.py
clab_connector/services/manifest/: manifest_generator.py
clab_connector/services/removal/: __init__.py  topology_remover.py
clab_connector/services/status/: node_sync_checker.py
clab_connector/services/workflow/: __init__.py  network_topology_generator.py
clab_connector/templates/: artifact.j2  init.yaml.j2  interface.j2  node-profile.j2  node-user-group.yaml.j2  node-user.j2  nodesecurityprofile.yaml.j2  topolink.j2  toponode.j2
clab_connector/utils/: api_utils.py  constants.py  exceptions.py  formatters.py  helpers.py  kubernetes_utils.py  logging_config.py  validators.py  yaml_processor.py
example-topologies/: EDA-T2.clab.yml  EDA-sros.clab.yml  EDA-sros.labels.clab.yml  EDA-sros.legacy.clab.yml  EDA-tiny.clab.yml  EDA-tiny.labels.clab.yml  srlinux.cfg  sros_fp4.yml  sros_fp5.yml
src/: eda.py  helpers.py  http_client.py  integrate.py  k8s_utils.py  link.py  node.py  node_srl.py  remove.py  topology.py
startup-configurations/: srlinux.cfg
templates/: allocation-pool.j2  artifact.j2  bootstrap-node.j2  init.yaml.j2  interface.j2  namespace.j2  node-profile.j2  node-user.j2  srlinux-bootstrap-config.j2  topolink.j2  toponode.j2
tests/: test_cli_version.py  test_init_routes.py  test_srl_node_profile.py  test_versioning.py
